--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Google Home Replica</title>
+    <title>G-scams - Google for scams</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -28,13 +28,13 @@
       <img id="Glogo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
     
       <form>
-        <input type="text" name="search">
-        <img id="Gvoice" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSN2HSVaKpn49eNFj-opHxfWqeCbboeTRY0ZDfRgFxSRvyvNX1V-dGmmw">
+      <script async src="https://cse.google.com/cse.js?cx=006988334545978584382:uinifkrxqea"></script>
+      <div class="gcse-search"></div>
       </form>
 
-      <button class="sub-bttms" type="button">Google Search</button>
+      <button class="sub-bttms" type="button">Unmasp Search</button>
   
-      <button class="sub-bttms" type ="button">I'm Feeling Lucky</button>
+      <button class="sub-bttms" type ="button">I'm Feeling scammed</button>
     </div> <!--end of div middle block-->
   </div><!--end of div container-->
     
