--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
    
     <div class="middleblock">
-      <img id="Glogo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+      <img id="G-scams" src="https://i.postimg.cc/brVx879P/g-scams.png">
     
       <form>
       <script async src="https://cse.google.com/cse.js?cx=006988334545978584382:uinifkrxqea"></script>
