--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       <img id="G-scams" src="https://i.postimg.cc/brVx879P/g-scams.png">
     
       <form>
-      <script async src="https://cse.google.com/cse.js?cx=006988334545978584382:uinifkrxqea"></script>
-      <div class="gcse-search"></div>
+<script async src='https://cse.google.com/cse.js?cx=partner-pub-6776441621567767:shoyuehwcke'></script><div class="gcse-searchbox-only"></div>
       </form>
 
       <button class="sub-bttms" type="button">Unmasp Search</button>
