--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
 <!-- Facebook Meta Tags -->
 <meta property="og:type" content="website">
-<meta property="og:title" content="">
+<meta property="og:title" content="G-Scams - Google just for Scams">
 <meta property="og:description" content="G-Scams - Google just for Scams, created by Shaheer Ahmed and powered by Unmasp. G-scams is a website which has info regarding scams from all the scam directories across the internet.">
 <meta property="og:image" content="https://cdn.grapedrop.com/https://cdn.grapedrop.com/https://cdn.grapedrop.com/uad22a8bccd7444ad8e83f67ff686b906/p89f10e260b7a4dc1bf38c83641ca8f7c/ogimage.jpeg?1588931440?1588931454?1588931764">
 <meta property="og:url" content="http://gscams.unmasp.tech">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="">
+<meta name="twitter:title" content="G-Scams - Google just for Scams">
 <meta name="twitter:description" content="G-Scams - Google just for Scams, created by Shaheer Ahmed and powered by Unmasp. G-scams is a website which has info regarding scams from all the scam directories across the internet.">
 <meta name="twitter:image" content="https://cdn.grapedrop.com/https://cdn.grapedrop.com/https://cdn.grapedrop.com/uad22a8bccd7444ad8e83f67ff686b906/p89f10e260b7a4dc1bf38c83641ca8f7c/ogimage.jpeg?1588931440?1588931454?1588931764">
 
@@ -44,7 +44,7 @@
         "@type":"WebPage",
         "url":"http://gscams.unmasp.tech",
         "description":"G-Scams - Google just for Scams, created by Shaheer Ahmed and powered by Unmasp. G-scams is a website which has info regarding scams from all the scam directories across the internet.",
-        "name":"",
+        "name":"G-Scams - Google just for Scams",
         "image":"https://cdn.grapedrop.com/https://cdn.grapedrop.com/https://cdn.grapedrop.com/uad22a8bccd7444ad8e83f67ff686b906/p89f10e260b7a4dc1bf38c83641ca8f7c/ogimage.jpeg?1588931440?1588931454?1588931764"
     }
 </script>
@@ -98,7 +98,7 @@
     }
 
 </style>
-<a href="https://grapedrop.com" target="_blank" class="page-brand-badge"
+<a href="https://creator.unmasp.tech" target="_blank" class="page-brand-badge"
     style="bottom: 10px !important; left: 10px !important; display: block !important; opacity: 1 !important; visibility: visible !important; position: fixed !important;">
     <svg class="logo-circ" viewBox="0 0 500 500" version="1.1" xmlns="http://www.w3.org/2000/svg" style="width:13px; height:13px; vertical-align: middle; margin-right: 3px; margin-top: -2px;">
             <defs>
@@ -114,7 +114,7 @@
                 </g>
             </g>
         </svg>
-        Made with Grapedrop
+        Made by Shaheer
 </a>
 
     <script async src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
