--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="G-Scams - Google just for Scams">
 <meta name="twitter:description" content="G-Scams - Google just for Scams, created by Shaheer Ahmed and powered by Unmasp. G-scams is a website which has info regarding scams from all the scam directories across the internet.">
-<meta name="twitter:image" content="https://cdn.grapedrop.com/https://cdn.grapedrop.com/https://cdn.grapedrop.com/uad22a8bccd7444ad8e83f67ff686b906/p89f10e260b7a4dc1bf38c83641ca8f7c/ogimage.jpeg?1588931440?1588931454?1588931764">
+<meta name="twitter:image" content="https://i.postimg.cc/KvncZfmF/open-gscams.png">
 
     <link rel="icon" type="image/png" href="images/favicon.png">
 
