--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="G-Scams - Google just for Scams">
 <meta itemprop="description" content="G-Scams - Google just for Scams, created by Shaheer Ahmed and powered by Unmasp. G-scams is a website which has info regarding scams from all the scam directories across the internet.">
-<meta itemprop="image" content="https://cdn.grapedrop.com/https://cdn.grapedrop.com/https://cdn.grapedrop.com/uad22a8bccd7444ad8e83f67ff686b906/p89f10e260b7a4dc1bf38c83641ca8f7c/ogimage.jpeg?1588931440?1588931454?1588931764">
+<meta itemprop="image" content="https://i.postimg.cc/KvncZfmF/open-gscams.png">
 
 <!-- MS Tile - for Microsoft apps-->
-<meta name="msapplication-TileImage" content="https://cdn.grapedrop.com/https://cdn.grapedrop.com/https://cdn.grapedrop.com/uad22a8bccd7444ad8e83f67ff686b906/p89f10e260b7a4dc1bf38c83641ca8f7c/ogimage.jpeg?1588931440?1588931454?1588931764">
+<meta name="msapplication-TileImage" content="https://i.postimg.cc/KvncZfmF/open-gscams.png">
 
 <!-- Facebook Meta Tags -->
 <meta property="og:type" content="website">
 <meta property="og:title" content="G-Scams - Google just for Scams">
 <meta property="og:description" content="G-Scams - Google just for Scams, created by Shaheer Ahmed and powered by Unmasp. G-scams is a website which has info regarding scams from all the scam directories across the internet.">
-<meta property="og:image" content="https://cdn.grapedrop.com/https://cdn.grapedrop.com/https://cdn.grapedrop.com/uad22a8bccd7444ad8e83f67ff686b906/p89f10e260b7a4dc1bf38c83641ca8f7c/ogimage.jpeg?1588931440?1588931454?1588931764">
+<meta property="og:image" content="https://i.postimg.cc/KvncZfmF/open-gscams.png">
 <meta property="og:url" content="http://gscams.unmasp.tech">
 
 <!-- Twitter Meta Tags -->
